// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.Ol checkGrammar=false 1`] = `
<ContextProvider
  value={
    Object {
      "counterId": "uu5_bricks_list_counter_39",
      "listLevel": 1,
      "ordered": true,
      "type": null,
    }
  }
>
  <ol
    className="uu5-bricks-ol"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  >
    <Li
      content="Li text"
      id="childID"
      key="childID"
    />
  </ol>
</ContextProvider>
`;

exports[`UU5.Bricks.Ol checkGrammar=true 1`] = `
<ContextProvider
  value={
    Object {
      "counterId": "uu5_bricks_list_counter_38",
      "listLevel": 1,
      "ordered": true,
      "type": null,
    }
  }
>
  <ol
    className="uu5-bricks-ol"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  >
    <Li
      content="Li text"
      id="childID"
      key="childID"
    />
  </ol>
</ContextProvider>
`;

exports[`UU5.Bricks.Ol checkHighlight=false 1`] = `
<ContextProvider
  value={
    Object {
      "counterId": "uu5_bricks_list_counter_41",
      "listLevel": 1,
      "ordered": true,
      "type": null,
    }
  }
>
  <ol
    className="uu5-bricks-ol"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  >
    <Li
      content="Li text"
      id="childID"
      key="childID"
    />
  </ol>
</ContextProvider>
`;

exports[`UU5.Bricks.Ol checkHighlight=true 1`] = `
<ContextProvider
  value={
    Object {
      "counterId": "uu5_bricks_list_counter_40",
      "listLevel": 1,
      "ordered": true,
      "type": null,
    }
  }
>
  <ol
    className="uu5-bricks-ol"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  >
    <Li
      content="Li text"
      id="childID"
      key="childID"
    />
  </ol>
</ContextProvider>
`;

exports[`UU5.Bricks.Ol checkSpaces=false 1`] = `
<ContextProvider
  value={
    Object {
      "counterId": "uu5_bricks_list_counter_37",
      "listLevel": 1,
      "ordered": true,
      "type": null,
    }
  }
>
  <ol
    className="uu5-bricks-ol"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  >
    <Li
      content="Li text"
      id="childID"
      key="childID"
    />
  </ol>
</ContextProvider>
`;

exports[`UU5.Bricks.Ol checkSpaces=true 1`] = `
<ContextProvider
  value={
    Object {
      "counterId": "uu5_bricks_list_counter_36",
      "listLevel": 1,
      "ordered": true,
      "type": null,
    }
  }
>
  <ol
    className="uu5-bricks-ol"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  >
    <Li
      content="Li text"
      id="childID"
      key="childID"
    />
  </ol>
</ContextProvider>
`;

exports[`UU5.Bricks.Ol className="my-classname" 1`] = `
<ContextProvider
  value={
    Object {
      "counterId": "uu5_bricks_list_counter_4",
      "listLevel": 1,
      "ordered": true,
      "type": null,
    }
  }
>
  <ol
    className="uu5-bricks-ol my-classname"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  >
    <Li
      content="Li text"
      id="childID"
      key="childID"
    />
  </ol>
</ContextProvider>
`;

exports[`UU5.Bricks.Ol content="This is Content from ContentMixin" 1`] = `
<ContextProvider
  value={
    Object {
      "counterId": "uu5_bricks_list_counter_33",
      "listLevel": 1,
      "ordered": true,
      "type": null,
    }
  }
>
  <ol
    className="uu5-bricks-ol"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ol content=12345 1`] = `
<ContextProvider
  value={
    Object {
      "counterId": "uu5_bricks_list_counter_32",
      "listLevel": 1,
      "ordered": true,
      "type": null,
    }
  }
>
  <ol
    className="uu5-bricks-ol"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ol controlled=false 1`] = `
<ContextProvider
  value={
    Object {
      "counterId": "uu5_bricks_list_counter_17",
      "listLevel": 1,
      "ordered": true,
      "type": null,
    }
  }
>
  <ol
    className="uu5-bricks-ol"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  >
    <Li
      content="Li text"
      id="childID"
      key="childID"
    />
  </ol>
</ContextProvider>
`;

exports[`UU5.Bricks.Ol controlled=true 1`] = `
<ContextProvider
  value={
    Object {
      "counterId": "uu5_bricks_list_counter_16",
      "listLevel": 1,
      "ordered": true,
      "type": null,
    }
  }
>
  <ol
    className="uu5-bricks-ol"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  >
    <Li
      content="Li text"
      id="childID"
      key="childID"
    />
  </ol>
</ContextProvider>
`;

exports[`UU5.Bricks.Ol default props 1`] = `
<ContextProvider
  value={
    Object {
      "counterId": "uu5_bricks_list_counter_0",
      "listLevel": 1,
      "ordered": true,
      "type": null,
    }
  }
>
  <ol
    className="uu5-bricks-ol"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  >
    <Li
      content="Li text"
      id="childID"
      key="childID"
    />
  </ol>
</ContextProvider>
`;

exports[`UU5.Bricks.Ol disabled=false 1`] = `
<ContextProvider
  value={
    Object {
      "counterId": "uu5_bricks_list_counter_13",
      "listLevel": 1,
      "ordered": true,
      "type": null,
    }
  }
>
  <ol
    className="uu5-bricks-ol"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  >
    <Li
      content="Li text"
      id="childID"
      key="childID"
    />
  </ol>
</ContextProvider>
`;

exports[`UU5.Bricks.Ol disabled=true 1`] = `
<ContextProvider
  value={
    Object {
      "counterId": "uu5_bricks_list_counter_12",
      "listLevel": 1,
      "ordered": true,
      "type": null,
    }
  }
>
  <ol
    className="uu5-bricks-ol uu5-common-disabled"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  >
    <Li
      content="Li text"
      id="childID"
      key="childID"
    />
    <span
      className="uu5-common-disabled-cover"
      key="disabledCover"
    />
  </ol>
</ContextProvider>
`;

exports[`UU5.Bricks.Ol dynamic=false 1`] = `
<ContextProvider
  value={
    Object {
      "counterId": "uu5_bricks_list_counter_45",
      "listLevel": 1,
      "ordered": true,
      "type": null,
    }
  }
>
  <ol
    className="uu5-bricks-ol"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  >
    <Li
      content="Li text"
      id="childID"
      key="childID"
    />
  </ol>
</ContextProvider>
`;

exports[`UU5.Bricks.Ol dynamic=true 1`] = `
<ContextProvider
  value={
    Object {
      "counterId": "uu5_bricks_list_counter_44",
      "listLevel": 1,
      "ordered": true,
      "type": null,
    }
  }
>
  <ol
    className="uu5-bricks-ol"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  >
    <Li
      content="Li text"
      id="childID"
      key="childID"
    />
  </ol>
</ContextProvider>
`;

exports[`UU5.Bricks.Ol footer={"type":"div","key":null,"ref":null,"props":{"children":"Footer of section"},"_owner":null,"_store":{}} 1`] = `
<ContextProvider
  value={
    Object {
      "counterId": "uu5_bricks_list_counter_19",
      "listLevel": 1,
      "ordered": true,
      "type": null,
    }
  }
>
  <ol
    className="uu5-bricks-ol"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  >
    <Li
      content="Li text"
      id="childID"
      key="childID"
    />
    <Footer
      content={
        <div>
          Footer of section
        </div>
      }
      id="uuID-footer"
      key="uuID-footer"
    />
  </ol>
</ContextProvider>
`;

exports[`UU5.Bricks.Ol header={"type":"div","key":null,"ref":null,"props":{"children":"Header of section"},"_owner":null,"_store":{}} 1`] = `
<ContextProvider
  value={
    Object {
      "counterId": "uu5_bricks_list_counter_18",
      "listLevel": 1,
      "ordered": true,
      "type": null,
    }
  }
>
  <ol
    className="uu5-bricks-ol"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  >
    <Header
      content={
        <div>
          Header of section
        </div>
      }
      id="uuID-header"
      key="uuID-header"
      underline={false}
    />
    <Li
      content="Li text"
      id="childID"
      key="childID"
    />
  </ol>
</ContextProvider>
`;

exports[`UU5.Bricks.Ol hidden=false 1`] = `
<ContextProvider
  value={
    Object {
      "counterId": "uu5_bricks_list_counter_11",
      "listLevel": 1,
      "ordered": true,
      "type": null,
    }
  }
>
  <ol
    className="uu5-bricks-ol"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  >
    <Li
      content="Li text"
      id="childID"
      key="childID"
    />
  </ol>
</ContextProvider>
`;

exports[`UU5.Bricks.Ol hidden=true 1`] = `
<ContextProvider
  value={
    Object {
      "counterId": "uu5_bricks_list_counter_10",
      "listLevel": 1,
      "ordered": true,
      "type": null,
    }
  }
>
  <ol
    className="uu5-bricks-ol uu5-common-hidden"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  >
    <Li
      content="Li text"
      id="childID"
      key="childID"
    />
  </ol>
</ContextProvider>
`;

exports[`UU5.Bricks.Ol id="myId" 1`] = `
<ContextProvider
  value={
    Object {
      "counterId": "uu5_bricks_list_counter_1",
      "listLevel": 1,
      "ordered": true,
      "type": null,
    }
  }
>
  <ol
    className="uu5-bricks-ol"
    id="myId"
    style={Object {}}
    title={null}
    type={null}
  >
    <Li
      content="Li text"
      id="childID"
      key="childID"
    />
  </ol>
</ContextProvider>
`;

exports[`UU5.Bricks.Ol ignoreHTML=false 1`] = `
<ContextProvider
  value={
    Object {
      "counterId": "uu5_bricks_list_counter_35",
      "listLevel": 1,
      "ordered": true,
      "type": null,
    }
  }
>
  <ol
    className="uu5-bricks-ol"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  >
    <Li
      content="Li text"
      id="childID"
      key="childID"
    />
  </ol>
</ContextProvider>
`;

exports[`UU5.Bricks.Ol ignoreHTML=true 1`] = `
<ContextProvider
  value={
    Object {
      "counterId": "uu5_bricks_list_counter_34",
      "listLevel": 1,
      "ordered": true,
      "type": null,
    }
  }
>
  <ol
    className="uu5-bricks-ol"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  >
    <Li
      content="Li text"
      id="childID"
      key="childID"
    />
  </ol>
</ContextProvider>
`;

exports[`UU5.Bricks.Ol level="0" 1`] = `
<ContextProvider
  value={
    Object {
      "counterId": "uu5_bricks_list_counter_53",
      "listLevel": 1,
      "ordered": true,
      "type": null,
    }
  }
>
  <ol
    className="uu5-bricks-ol"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  >
    <Li
      content="Li text"
      id="childID"
      key="childID"
    />
  </ol>
</ContextProvider>
`;

exports[`UU5.Bricks.Ol level="1" 1`] = `
<ContextProvider
  value={
    Object {
      "counterId": "uu5_bricks_list_counter_54",
      "listLevel": 1,
      "ordered": true,
      "type": null,
    }
  }
>
  <ol
    className="uu5-bricks-ol"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  >
    <Li
      content="Li text"
      id="childID"
      key="childID"
    />
  </ol>
</ContextProvider>
`;

exports[`UU5.Bricks.Ol level="2" 1`] = `
<ContextProvider
  value={
    Object {
      "counterId": "uu5_bricks_list_counter_55",
      "listLevel": 1,
      "ordered": true,
      "type": null,
    }
  }
>
  <ol
    className="uu5-bricks-ol"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  >
    <Li
      content="Li text"
      id="childID"
      key="childID"
    />
  </ol>
</ContextProvider>
`;

exports[`UU5.Bricks.Ol level="3" 1`] = `
<ContextProvider
  value={
    Object {
      "counterId": "uu5_bricks_list_counter_56",
      "listLevel": 1,
      "ordered": true,
      "type": null,
    }
  }
>
  <ol
    className="uu5-bricks-ol"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  >
    <Li
      content="Li text"
      id="childID"
      key="childID"
    />
  </ol>
</ContextProvider>
`;

exports[`UU5.Bricks.Ol level="4" 1`] = `
<ContextProvider
  value={
    Object {
      "counterId": "uu5_bricks_list_counter_57",
      "listLevel": 1,
      "ordered": true,
      "type": null,
    }
  }
>
  <ol
    className="uu5-bricks-ol"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  >
    <Li
      content="Li text"
      id="childID"
      key="childID"
    />
  </ol>
</ContextProvider>
`;

exports[`UU5.Bricks.Ol level="5" 1`] = `
<ContextProvider
  value={
    Object {
      "counterId": "uu5_bricks_list_counter_58",
      "listLevel": 1,
      "ordered": true,
      "type": null,
    }
  }
>
  <ol
    className="uu5-bricks-ol"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  >
    <Li
      content="Li text"
      id="childID"
      key="childID"
    />
  </ol>
</ContextProvider>
`;

exports[`UU5.Bricks.Ol level="6" 1`] = `
<ContextProvider
  value={
    Object {
      "counterId": "uu5_bricks_list_counter_59",
      "listLevel": 1,
      "ordered": true,
      "type": null,
    }
  }
>
  <ol
    className="uu5-bricks-ol"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  >
    <Li
      content="Li text"
      id="childID"
      key="childID"
    />
  </ol>
</ContextProvider>
`;

exports[`UU5.Bricks.Ol level=0 1`] = `
<ContextProvider
  value={
    Object {
      "counterId": "uu5_bricks_list_counter_46",
      "listLevel": 1,
      "ordered": true,
      "type": null,
    }
  }
>
  <ol
    className="uu5-bricks-ol"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  >
    <Li
      content="Li text"
      id="childID"
      key="childID"
    />
  </ol>
</ContextProvider>
`;

exports[`UU5.Bricks.Ol level=1 1`] = `
<ContextProvider
  value={
    Object {
      "counterId": "uu5_bricks_list_counter_47",
      "listLevel": 1,
      "ordered": true,
      "type": null,
    }
  }
>
  <ol
    className="uu5-bricks-ol"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  >
    <Li
      content="Li text"
      id="childID"
      key="childID"
    />
  </ol>
</ContextProvider>
`;

exports[`UU5.Bricks.Ol level=2 1`] = `
<ContextProvider
  value={
    Object {
      "counterId": "uu5_bricks_list_counter_48",
      "listLevel": 1,
      "ordered": true,
      "type": null,
    }
  }
>
  <ol
    className="uu5-bricks-ol"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  >
    <Li
      content="Li text"
      id="childID"
      key="childID"
    />
  </ol>
</ContextProvider>
`;

exports[`UU5.Bricks.Ol level=3 1`] = `
<ContextProvider
  value={
    Object {
      "counterId": "uu5_bricks_list_counter_49",
      "listLevel": 1,
      "ordered": true,
      "type": null,
    }
  }
>
  <ol
    className="uu5-bricks-ol"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  >
    <Li
      content="Li text"
      id="childID"
      key="childID"
    />
  </ol>
</ContextProvider>
`;

exports[`UU5.Bricks.Ol level=4 1`] = `
<ContextProvider
  value={
    Object {
      "counterId": "uu5_bricks_list_counter_50",
      "listLevel": 1,
      "ordered": true,
      "type": null,
    }
  }
>
  <ol
    className="uu5-bricks-ol"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  >
    <Li
      content="Li text"
      id="childID"
      key="childID"
    />
  </ol>
</ContextProvider>
`;

exports[`UU5.Bricks.Ol level=5 1`] = `
<ContextProvider
  value={
    Object {
      "counterId": "uu5_bricks_list_counter_51",
      "listLevel": 1,
      "ordered": true,
      "type": null,
    }
  }
>
  <ol
    className="uu5-bricks-ol"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  >
    <Li
      content="Li text"
      id="childID"
      key="childID"
    />
  </ol>
</ContextProvider>
`;

exports[`UU5.Bricks.Ol level=6 1`] = `
<ContextProvider
  value={
    Object {
      "counterId": "uu5_bricks_list_counter_52",
      "listLevel": 1,
      "ordered": true,
      "type": null,
    }
  }
>
  <ol
    className="uu5-bricks-ol"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  >
    <Li
      content="Li text"
      id="childID"
      key="childID"
    />
  </ol>
</ContextProvider>
`;

exports[`UU5.Bricks.Ol mainAttrs=undefined 1`] = `
<ContextProvider
  value={
    Object {
      "counterId": "uu5_bricks_list_counter_7",
      "listLevel": 1,
      "ordered": true,
      "type": null,
    }
  }
>
  <ol
    className="uu5-bricks-ol"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  >
    <Li
      content="Li text"
      id="childID"
      key="childID"
    />
  </ol>
</ContextProvider>
`;

exports[`UU5.Bricks.Ol name="myName" 1`] = `
<ContextProvider
  value={
    Object {
      "counterId": "uu5_bricks_list_counter_2",
      "listLevel": 1,
      "ordered": true,
      "type": null,
    }
  }
>
  <ol
    className="uu5-bricks-ol"
    id="uuID"
    name="myName"
    style={Object {}}
    title={null}
    type={null}
  >
    <Li
      content="Li text"
      id="childID"
      key="childID"
    />
  </ol>
</ContextProvider>
`;

exports[`UU5.Bricks.Ol nestingLevel="bigBox" 1`] = `
<ContextProvider
  value={
    Object {
      "counterId": "uu5_bricks_list_counter_26",
      "listLevel": 1,
      "ordered": true,
      "type": null,
    }
  }
>
  <ol
    className="uu5-bricks-ol"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  >
    <Li
      content="Li text"
      id="childID"
      key="childID"
    />
  </ol>
</ContextProvider>
`;

exports[`UU5.Bricks.Ol nestingLevel="bigBoxCollection" 1`] = `
<ContextProvider
  value={
    Object {
      "counterId": "uu5_bricks_list_counter_25",
      "listLevel": 1,
      "ordered": true,
      "type": null,
    }
  }
>
  <ol
    className="uu5-bricks-ol"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  >
    <Li
      content="Li text"
      id="childID"
      key="childID"
    />
  </ol>
</ContextProvider>
`;

exports[`UU5.Bricks.Ol nestingLevel="box" 1`] = `
<ContextProvider
  value={
    Object {
      "counterId": "uu5_bricks_list_counter_28",
      "listLevel": 1,
      "ordered": true,
      "type": null,
    }
  }
>
  <ol
    className="uu5-bricks-ol"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  >
    <Li
      content="Li text"
      id="childID"
      key="childID"
    />
  </ol>
</ContextProvider>
`;

exports[`UU5.Bricks.Ol nestingLevel="boxCollection" 1`] = `
<ContextProvider
  value={
    Object {
      "counterId": "uu5_bricks_list_counter_27",
      "listLevel": 1,
      "ordered": true,
      "type": null,
    }
  }
>
  <ol
    className="uu5-bricks-ol"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  >
    <Li
      content="Li text"
      id="childID"
      key="childID"
    />
  </ol>
</ContextProvider>
`;

exports[`UU5.Bricks.Ol nestingLevel="container" 1`] = `
<ContextProvider
  value={
    Object {
      "counterId": "uu5_bricks_list_counter_23",
      "listLevel": 1,
      "ordered": true,
      "type": null,
    }
  }
>
  <ol
    className="uu5-bricks-ol"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  >
    <Li
      content="Li text"
      id="childID"
      key="childID"
    />
  </ol>
</ContextProvider>
`;

exports[`UU5.Bricks.Ol nestingLevel="inline" 1`] = `
<ContextProvider
  value={
    Object {
      "counterId": "uu5_bricks_list_counter_31",
      "listLevel": 1,
      "ordered": true,
      "type": null,
    }
  }
>
  <ol
    className="uu5-bricks-ol uu-bricks-6b65vc"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  >
    <Li
      content="Li text"
      id="childID"
      key="childID"
    />
  </ol>
</ContextProvider>
`;

exports[`UU5.Bricks.Ol nestingLevel="page" 1`] = `
<ContextProvider
  value={
    Object {
      "counterId": "uu5_bricks_list_counter_24",
      "listLevel": 1,
      "ordered": true,
      "type": null,
    }
  }
>
  <ol
    className="uu5-bricks-ol"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  >
    <Li
      content="Li text"
      id="childID"
      key="childID"
    />
  </ol>
</ContextProvider>
`;

exports[`UU5.Bricks.Ol nestingLevel="smallBox" 1`] = `
<ContextProvider
  value={
    Object {
      "counterId": "uu5_bricks_list_counter_30",
      "listLevel": 1,
      "ordered": true,
      "type": null,
    }
  }
>
  <ol
    className="uu5-bricks-ol uu-bricks-6b65vc"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  >
    <Li
      content="Li text"
      id="childID"
      key="childID"
    />
  </ol>
</ContextProvider>
`;

exports[`UU5.Bricks.Ol nestingLevel="smallBoxCollection" 1`] = `
<ContextProvider
  value={
    Object {
      "counterId": "uu5_bricks_list_counter_29",
      "listLevel": 1,
      "ordered": true,
      "type": null,
    }
  }
>
  <ol
    className="uu5-bricks-ol uu-bricks-6b65vc"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  >
    <Li
      content="Li text"
      id="childID"
      key="childID"
    />
  </ol>
</ContextProvider>
`;

exports[`UU5.Bricks.Ol nestingLevel="spa" 1`] = `
<ContextProvider
  value={
    Object {
      "counterId": "uu5_bricks_list_counter_22",
      "listLevel": 1,
      "ordered": true,
      "type": null,
    }
  }
>
  <ol
    className="uu5-bricks-ol"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  >
    <Li
      content="Li text"
      id="childID"
      key="childID"
    />
  </ol>
</ContextProvider>
`;

exports[`UU5.Bricks.Ol noIndex=false 1`] = `
<ContextProvider
  value={
    Object {
      "counterId": "uu5_bricks_list_counter_9",
      "listLevel": 1,
      "ordered": true,
      "type": null,
    }
  }
>
  <ol
    className="uu5-bricks-ol"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  >
    <Li
      content="Li text"
      id="childID"
      key="childID"
    />
  </ol>
</ContextProvider>
`;

exports[`UU5.Bricks.Ol noIndex=true 1`] = `
<ContextProvider
  value={
    Object {
      "counterId": "uu5_bricks_list_counter_8",
      "listLevel": 1,
      "ordered": true,
      "type": null,
    }
  }
>
  <ol
    className="uu5-bricks-ol uu5-noindex"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  >
    <Li
      content="Li text"
      id="childID"
      key="childID"
    />
  </ol>
</ContextProvider>
`;

exports[`UU5.Bricks.Ol selected=false 1`] = `
<ContextProvider
  value={
    Object {
      "counterId": "uu5_bricks_list_counter_15",
      "listLevel": 1,
      "ordered": true,
      "type": null,
    }
  }
>
  <ol
    className="uu5-bricks-ol"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  >
    <Li
      content="Li text"
      id="childID"
      key="childID"
    />
  </ol>
</ContextProvider>
`;

exports[`UU5.Bricks.Ol selected=true 1`] = `
<ContextProvider
  value={
    Object {
      "counterId": "uu5_bricks_list_counter_14",
      "listLevel": 1,
      "ordered": true,
      "type": null,
    }
  }
>
  <ol
    className="uu5-bricks-ol uu5-common-selected"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  >
    <Li
      content="Li text"
      id="childID"
      key="childID"
    />
  </ol>
</ContextProvider>
`;

exports[`UU5.Bricks.Ol style="padding:8px; borderRadius: 2px" 1`] = `
<ContextProvider
  value={
    Object {
      "counterId": "uu5_bricks_list_counter_5",
      "listLevel": 1,
      "ordered": true,
      "type": null,
    }
  }
>
  <ol
    className="uu5-bricks-ol"
    id="uuID"
    style={
      Object {
        "borderRadius": "2px",
        "padding": "8px",
      }
    }
    title={null}
    type={null}
  >
    <Li
      content="Li text"
      id="childID"
      key="childID"
    />
  </ol>
</ContextProvider>
`;

exports[`UU5.Bricks.Ol style={"backgroundColor":"red","color":"blue"} 1`] = `
<ContextProvider
  value={
    Object {
      "counterId": "uu5_bricks_list_counter_6",
      "listLevel": 1,
      "ordered": true,
      "type": null,
    }
  }
>
  <ol
    className="uu5-bricks-ol"
    id="uuID"
    style={
      Object {
        "backgroundColor": "red",
        "color": "blue",
      }
    }
    title={null}
    type={null}
  >
    <Li
      content="Li text"
      id="childID"
      key="childID"
    />
  </ol>
</ContextProvider>
`;

exports[`UU5.Bricks.Ol textCorrector=false 1`] = `
<ContextProvider
  value={
    Object {
      "counterId": "uu5_bricks_list_counter_43",
      "listLevel": 1,
      "ordered": true,
      "type": null,
    }
  }
>
  <ol
    className="uu5-bricks-ol"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  >
    <Li
      content="Li text"
      id="childID"
      key="childID"
    />
  </ol>
</ContextProvider>
`;

exports[`UU5.Bricks.Ol textCorrector=true 1`] = `
<ContextProvider
  value={
    Object {
      "counterId": "uu5_bricks_list_counter_42",
      "listLevel": 1,
      "ordered": true,
      "type": null,
    }
  }
>
  <ol
    className="uu5-bricks-ol"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  >
    <Li
      content="Li text"
      id="childID"
      key="childID"
    />
  </ol>
</ContextProvider>
`;

exports[`UU5.Bricks.Ol tooltip="My Tooltip" 1`] = `
<ContextProvider
  value={
    Object {
      "counterId": "uu5_bricks_list_counter_3",
      "listLevel": 1,
      "ordered": true,
      "type": null,
    }
  }
>
  <ol
    className="uu5-bricks-ol"
    id="uuID"
    style={Object {}}
    title="My Tooltip"
    type={null}
  >
    <Li
      content="Li text"
      id="childID"
      key="childID"
    />
  </ol>
</ContextProvider>
`;

exports[`UU5.Bricks.Ol underline=false 1`] = `
<ContextProvider
  value={
    Object {
      "counterId": "uu5_bricks_list_counter_21",
      "listLevel": 1,
      "ordered": true,
      "type": null,
    }
  }
>
  <ol
    className="uu5-bricks-ol"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  >
    <Li
      content="Li text"
      id="childID"
      key="childID"
    />
  </ol>
</ContextProvider>
`;

exports[`UU5.Bricks.Ol underline=true 1`] = `
<ContextProvider
  value={
    Object {
      "counterId": "uu5_bricks_list_counter_20",
      "listLevel": 1,
      "ordered": true,
      "type": null,
    }
  }
>
  <ol
    className="uu5-bricks-ol"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  >
    <Li
      content="Li text"
      id="childID"
      key="childID"
    />
  </ol>
</ContextProvider>
`;
